--- a/style.css
+++ b/style.css
@@ -1,12 +1,34 @@
 .container {
-	width: 1000px;
+	width: 800px;
 	margin: 0 auto;
 }
 
 .card {
-	height: 200px;
-	width: 150px;
+	height: 120px;
+	width: 120px;
 	background: lightblue;
 	float: left;
 	margin: 10px;
+	   border: 2px solid black;
 }
+.winnder{
+	text-align: center;
+	font-family: Century Gothic, sans-serif;
+}
+
+#title {
+	text-align: center;
+	font-family: Century Gothic, sans-serif;
+}
+
+p.emoji {
+		font-size: 50px;
+
+	 	 text-align: center;
+}
+/*.emoji-box {
+	border: 2px solid red;
+	padding-bottom: 90px;
+	height: 50px;
+	width: 50px;
+}*/
