make css changes to cards

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 	margin: 10px;
 	   border: 2px solid black;
 }
-.winnder{
+.winner{
 	text-align: center;
 	font-family: Century Gothic, sans-serif;
 }
